# Cryptography-app

./: package-lock.json  package.json
algorithm-time/: .gitignore  Cargo.toml  package-lock.json  package.json
algorithm-time/src/: lib.rs
app/: a.js  forge.config.ts  package-lock.json  package.json  tsconfig.json  udpProtocol.proto  udp_protocol.proto  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
app/src/: App.tsx  index.html  index.node  preload.ts
app/src/components/: common.tsx
app/src/components/udpServer/: ReceiveFile.tsx  SendFile.tsx
app/src/pages/: Manual.css  Manual.tsx  UdpServer.tsx  timeComparions.tsx
app/src/udpServer/: compiled.d.ts  compiled.js  index.ts
app/src/udp_server/: compiled.d.ts  compiled.js  main.ts
src/: App.css  App.tsx
