[package]
name = "algorithm-time"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
md5 = "0.7.0"
neon = "1"
rayon = "1.10.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
